--- a/src/app/components/footer-menu/footer-menu.component.html
+++ b/src/app/components/footer-menu/footer-menu.component.html
@@ -11,6 +11,10 @@
       </ion-button>
       <ion-button (click)="goTo('/perfil')" class="footer-btn">
         <ion-icon slot="start" name="person-circle-outline"></ion-icon>
+        <span>Equipos</span>
+      </ion-button>
+      <ion-button (click)="goTo('/perfil')" class="footer-btn">
+        <ion-icon slot="start" name="person-circle-outline"></ion-icon>
         <span>Perfil</span>
       </ion-button>
     </ion-buttons>
