--- a/src/app/pages/perfil/perfil.page.html
+++ b/src/app/pages/perfil/perfil.page.html
@@ -34,7 +34,7 @@
           </ion-avatar>
 
           <ion-label>
-            <h2 class="empresa-nombre">{{ visita.cliente?.empresa?.nombre || 'Empresa desconocida' }}</h2>
+            <h2 class="empresa-nombre">{{ visita.nombreCliente || 'Empresa desconocida' }}</h2>
             <!-- Nombre de la empresa o texto por defecto -->
             <h3 class="solicitante-nombre"> {{ visita.solicitante }}</h3> <!-- Nombre del solicitante -->
 
