--- a/src/app/pages/inicio-footer/inicio-footer.page.html
+++ b/src/app/pages/inicio-footer/inicio-footer.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar class="custom-header-toolbar">
-    <ion-title class="header-title">Perfil de Usuario</ion-title>
+    <ion-title class="header-title">Inicio</ion-title>
     <ion-buttons slot="end">
       <img src="assets/img/LOGO_RIDS.png" alt="Logo RIDS" style="height: 38px;" class="header-logo" />
     </ion-buttons>
